[package]
name = "fernfs"
version = "0.1.5"
edition = "2021"
description = "A Rust NFS Server implementation"
publish = true
rust-version = "1.83.0"
license = "BSD-3-Clause"
documentation = "https://docs.rs/fernfs"
homepage = "https://github.com/lunixbochs/fernfs"
repository = "https://github.com/lunixbochs/fernfs"

[lib]
doctest = false

[dependencies]
anyhow = "1"
async-trait = "0.1.9"
byteorder = "1.4"
bytestream = "0.4"
filetime = "0.2"
futures = "0.3.21"
intaglio = { version = "1.6" }
num-derive = "0.4"
num-traits = "0.2"
smallvec = "1.10.0"
tokio = { version = "1.0", features = ["full", "time"] }
tracing = "0.1.31"
tracing-attributes = "0.1"
tracing-subscriber = { version = "0.3", features = ["tracing-log"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]

[[example]]
name = "demofs"
path = "examples/demo_fs/main.rs"
